Definition of getWorkflowSpec (v2)
