# plugins/orchestrator-common/src/openapi/openapi.yaml
@@ -183,6 +183,25 @@ paths:
             text/plain:
               schema:
                 type: string
+  /v2/specs:
+    get:
+      summary: Get workflow specifications
+      operationId: getWorkflowSpecs
+      responses:
+        '200':
+          description: Successful retrieval of workflow specifications
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/WorkflowSpecFileDTO'
+        '500':
+          description: Error fetching workflow specifications
+          content:
+            text/plain:
+              schema:
+                type: string
 components:
   schemas:
     WorkflowOverviewListResultDTO:
@@ -361,3 +380,16 @@ components:
       properties:
         id:
           type: string
+    WorkflowSpecFileDTO:
+      type: object
+      properties:
+        path:
+          type: string
+        content:
+          $ref: '#/components/schemas/WorkflowContentDTO'
+    WorkflowContentDTO:
+      type: object
+      properties:
+        content:
+          type: string
+          description: JSON string
